Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -218,7 +218,82 @@
                 flex-direction: column;
             }
         }
+        /* Style for the FAQ section */
+.faq {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.faq h3 {
+    font-size: 1.2em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.faq p {
+    font-size: 1em;
+    color: #666;
+    line-height: 1.6;
+}
+
+/* Hover effect for FAQ */
+.faq:hover {
+    background-color: #f0f0f0;
+    transform: translateY(-2px);
+    transition: all 0.3s ease;
+}
+
+/* Responsive design for mobile */
+@media (max-width: 768px) {
+    .faq {
+        padding: 12px;
+    }
+
+    .faq h3 {
+        font-size: 1.1em;
+    }
+
+    .faq p {
+        font-size: 0.95em;
+    }
+}
+
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Keyword Density and Word Count Tool",
+  "url": "https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html",
+  "description": "Analyze keyword density and word count to optimize your content for SEO. Easily calculate the percentage of keyword usage and improve your content ranking.",
+  "applicationCategory": "SEO Tool",
+  "operatingSystem": "All",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Syed Ismail"
+  },
+  "softwareVersion": "1.0",
+  "datePublished": "2025-01-17",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Keywords From URLs",
+    "url": "https://keywordsfromurls.com"
+  },
+  "potentialAction": {
+    "@type": "UseAction",
+    "target": "https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html"
+  }
+}
+</script>
+
 
 
 </head>
@@ -315,5 +390,20 @@
             outputDiv.innerHTML = `<h2>${title}</h2><div>${content}</div>`;
         }
     </script>
+    <div class="faq">
+    <h3>1. What is Keyword Density?</h3>
+    <p>Keyword density refers to the percentage of times a keyword appears on a web page in relation to the total number of words on that page. It is an important factor for SEO as it helps search engines understand the relevance of the page to specific search queries.</p>
+</div>
+
+<div class="faq">
+    <h3>2. How Does the Keyword Density Tool Work?</h3>
+    <p>Our Keyword Density Tool analyzes the text you provide and calculates the frequency of each keyword. It then displays the density percentage for each word, helping you ensure that your keywords are used appropriately without overstuffing.</p>
+</div>
+
+<div class="faq">
+    <h3>3. Why is Keyword Density Important for SEO?</h3>
+    <p>Keyword density helps search engines determine the focus of your content. By using keywords strategically without overusing them, you can improve your page’s visibility for relevant search terms while maintaining a natural flow of content for your readers.</p>
+</div>
+
 </body>
 </html>
