keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -158,7 +158,79 @@
                 flex-direction: column;
             }
             }
+        .faq-section {
+  margin: 20px 0;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.faq-section h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.faq-item {
+  margin-bottom: 15px;
+}
+
+.faq-item h3 {
+  font-size: 18px;
+  color: #007BFF;
+  cursor: pointer;
+  margin: 0;
+}
+
+.faq-item h3:hover {
+  text-decoration: underline;
+}
+
+.faq-item p {
+  font-size: 16px;
+  color: #555;
+  margin: 5px 0 0;
+  display: none;
+}
+
+.faq-item.active p {
+  display: block;
+}
+
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Keyword Grouping Tool",
+  "url": "https://keywordsfromurls.com/Keyword-Grouping-Tool.html",
+  "description": "Effortlessly group related keywords for better SEO strategy. Organize keywords by themes to create more targeted content.",
+  "applicationCategory": "SEO Tool",
+  "operatingSystem": "All",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Syed Ismail"
+  },
+  "softwareVersion": "1.0",
+  "datePublished": "2025-01-17",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Keywords From URLs",
+    "url": "https://keywordsfromurls.com"
+  },
+  "potentialAction": {
+    "@type": "UseAction",
+    "target": "https://keywordsfromurls.com/Keyword-Grouping-Tool.html"
+  }
+}
+</script>
+
     
 </head>
 <body>
@@ -209,8 +281,28 @@
             This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
         </p>
     </div>
+        <div class="faq-section">
+  <h2>Frequently Asked Questions</h2>
+
+  <div class="faq-item">
+    <h3>What is the Keyword Grouping Tool?</h3>
+    <p>The Keyword Grouping Tool helps organize related keywords into thematic groups for better SEO strategies and content creation.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>How does the Keyword Grouping Tool work?</h3>
+    <p>The tool analyzes your provided keywords and clusters them based on their semantic similarity, helping you identify keyword themes quickly.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Is the Keyword Grouping Tool free to use?</h3>
+    <p>Yes, the tool is completely free to use. There are no hidden charges or fees.</p>
+  </div>
+</div>
+
         <br>
-        <br>
+        <br
+            
     <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
