--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -262,11 +262,11 @@
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
-            <a href="keywords-grouping.html">
-                <button>Keyword Grouping</button>
+            <a href="https://keywordsfromurls.com/">
+                <button>Keyword Extractor </button>
             </a>
             <a href="keywords-grouping.html">
-                <button>Keywords Extractor</button>
+                <button>Keywords Grouping</button>
             </a>
             <a href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
                 <button>Keyword Density</button>
@@ -299,20 +299,8 @@
             <div class="output-area" id="outputArea"></div>
             <button id="copyButton" class="copy-button" style="display:none;" onclick="copySlug()">Copy</button>
         </div>
-    </main>
-
-   <!-- Footer -->
-    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
-<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
-<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
-        <div class="right">
-            <a href="about-us.html">About Us</a>
-            <a href="contact-us.html">Contact Us</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
-            <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
-        </div>
-      <section id="faq">
+    </main
+          <section id="faq">
     <div class="container">
         <h2>Frequently Asked Questions (Slug Generator)</h2>
         <div class="faq-item">
@@ -329,6 +317,19 @@
         </div>
     </div>
 </section>
+
+   <!-- Footer -->
+    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+        <div class="right">
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
+            <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
+        </div>
+    
 
     </footer>
 
