Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -299,7 +299,8 @@
             <div class="output-area" id="outputArea"></div>
             <button id="copyButton" class="copy-button" style="display:none;" onclick="copySlug()">Copy</button>
         </div>
-    </main
+    </main>
+    <br>
           <section id="faq">
     <div class="container">
         <h2>Frequently Asked Questions (Slug Generator)</h2>
