keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -158,45 +158,54 @@
                 flex-direction: column;
             }
             
-        .faq-section {
-  margin: 20px 0;
+      /* FAQ Section Styling */
+.faq-section {
+  max-width: 800px;
+  margin: 0 auto;
   padding: 20px;
   background-color: #f9f9f9;
+  border: 1px solid #ddd;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .faq-section h2 {
+  text-align: center;
   font-size: 24px;
+  margin-bottom: 20px;
   color: #333;
-  margin-bottom: 15px;
 }
 
 .faq-item {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.faq-item:last-child {
+  border-bottom: none;
 }
 
 .faq-item h3 {
   font-size: 18px;
-  color: #007BFF;
+  color: #0056b3;
+  margin: 0 0 10px;
   cursor: pointer;
-  margin: 0;
-}
-
-.faq-item h3:hover {
-  text-decoration: underline;
 }
 
 .faq-item p {
+  display: block;
+  margin: 0;
   font-size: 16px;
-  color: #555;
-  margin: 5px 0 0;
-  display: none;
+  color: #333;
+  line-height: 1.5;
 }
 
-.faq-item.active p {
-  display: block;
+/* Optional: Add hover effect for the question */
+.faq-item h3:hover {
+  color: #003d99;
 }
+
+
    </style>
     <script type="application/ld+json">
 {
@@ -281,25 +290,25 @@
         </p>
     </div>
         <div class="faq-section">
-  <h2>Frequently Asked Questions</h2>
+    <h2>Frequently Asked Questions</h2>
 
-  <div class="faq-item">
-    <h3>What is the Keyword Grouping Tool?</h3>
-    <p>The Keyword Grouping Tool helps organize related keywords into thematic groups for better SEO strategies and content creation.</p>
+    <div class="faq-item">
+      <h3>What is the Keyword Grouping Tool?</h3>
+      <p>The Keyword Grouping Tool helps organize related keywords into thematic groups for better SEO strategies and content creation.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How does the Keyword Grouping Tool work?</h3>
+      <p>The tool analyzes your provided keywords and clusters them based on their semantic similarity, helping you identify keyword themes quickly.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Is the Keyword Grouping Tool free to use?</h3>
+      <p>Yes, the tool is completely free to use. There are no hidden charges or fees.</p>
+    </div>
   </div>
 
-  <div class="faq-item">
-    <h3>How does the Keyword Grouping Tool work?</h3>
-    <p>The tool analyzes your provided keywords and clusters them based on their semantic similarity, helping you identify keyword themes quickly.</p>
-  </div>
-
-  <div class="faq-item">
-    <h3>Is the Keyword Grouping Tool free to use?</h3>
-    <p>Yes, the tool is completely free to use. There are no hidden charges or fees.</p>
-  </div>
-</div>
-
-        <br>
+     <br>
         <br
             
     <!-- Footer -->
