--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -8,201 +8,78 @@
    <title>Keyword Grouping Tool | Organize & Optimize Keywords</title>
 
     <style>
-        body {
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
-        }
+       /* Responsive Design */
+@media (max-width: 768px) {
+    .header nav {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 
-        .container {
-            max-width: 800px;
-        }
+    .categories {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 
-        .highlight {
-            background-color: yellow;
-        }
+    .tool-container textarea {
+        height: 150px;
+    }
 
-        .copy-btn {
-            margin: 10px auto;
-            display: inline-block;
-        }
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 
-        .output, .summary {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            padding: 15px;
-            margin-top: 20px;
-            overflow-y: auto;
-        }
+    .footer .right {
+        flex-direction: column;
+    }
+} /* <-- Closing curly brace added here */
 
-        p {
-            text-align: center;
-            font-size: 1rem;
-            margin-top: 20px;
-        }
-
-        .center-btn {
-            text-align: center;
-            margin: 20px 0;
-        }
-         /* Header */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #007BFF;
-            color: white;
-        }
-
-        .header .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .header nav {
-            display: flex;
-            gap: 15px;
-        }
-
-        .header nav a {
-            color: white;
-            text-decoration: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header nav a:hover {
-            background-color: #0056b3;
-        }
-
-        /* Main Content */
-        .main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .categories {
-            display: flex;
-            justify-content: space-evenly;
-            margin-bottom: 20px;
-        }
-
-        .categories button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007BFF;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .categories button:hover {
-            background-color: #0056b3;
-        }
-         /* Footer */
-        .footer {
-            background-color: #007BFF;
-            color: white;
-            padding: 15px 30px;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-
-        .footer .left {
-            font-size: 14px;
-        }
-
-        .footer .right {
-            display: flex;
-            gap: 15px;
-        }
-
-        .footer .right a {
-            color: white;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .footer .right a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .header nav {
-                flex-wrap: wrap;
-                gap: 10px;
-            }
-
-            .categories {
-                flex-wrap: wrap;
-                gap: 10px;
-            }
-
-            .tool-container textarea {
-                height: 150px;
-            }
-
-            .footer {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-
-            .footer .right {
-                flex-direction: column;
-            }
-            
-      /* FAQ Section Styling */
+/* FAQ Section Styling */
 .faq-section {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  border-radius: 8px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
 }
 
 .faq-section h2 {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #333;
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
 }
 
 .faq-item {
-  margin-bottom: 20px;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
 }
 
 .faq-item:last-child {
-  border-bottom: none;
+    border-bottom: none;
 }
 
 .faq-item h3 {
-  font-size: 18px;
-  color: #0056b3;
-  margin: 0 0 10px;
-  cursor: pointer;
+    font-size: 18px;
+    color: #0056b3;
+    margin: 0 0 10px;
+    cursor: pointer;
 }
 
 .faq-item p {
-  display: block;
-  margin: 0;
-  font-size: 16px;
-  color: #333;
-  line-height: 1.5;
+    display: block;
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+    line-height: 1.5;
 }
 
 /* Optional: Add hover effect for the question */
 .faq-item h3:hover {
-  color: #003d99;
+    color: #003d99;
 }
 
 
