chrome-extension-for-keyword-extraction-from-urls.html

--- a/chrome-extension-for-keyword-extraction-from-urls.html
+++ b/chrome-extension-for-keyword-extraction-from-urls.html
@@ -170,6 +170,27 @@
             color: #007BFF;
         }
     </style>
+    <meta name="description" content="Download the Keywords from URLs Chrome Extension for quick keyword extraction, grouping, density analysis, and SEO-friendly slug generation. Ideal for bloggers, SEO professionals, and content creators.">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Keywords from URLs Chrome Extension",
+  "operatingSystem": "Chrome OS, Windows, macOS, Linux",
+  "applicationCategory": "UtilitiesApplication",
+  "description": "Download the Keywords from URLs Chrome Extension to extract keywords, group them, analyze density, and generate SEO-friendly slugs. Ideal for bloggers, SEO professionals, and content creators.",
+  "url": "https://chromewebstore.google.com/detail/keywords-from-urls-bloggi/daclbfnlfjkfgkcfdepgdlbchndjhehd",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  },
+  "softwareVersion": "1.0",
+  "datePublished": "2025-01-17",
+  "downloadUrl": "https://chromewebstore.google.com/detail/keywords-from-urls-bloggi/daclbfnlfjkfgkcfdepgdlbchndjhehd"
+}
+</script>
+
 </head>
 <body>
      <!-- Header -->
@@ -211,6 +232,8 @@
             If you have any questions or encounter issues contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.
         </p>
     </div>
+    <p>Looking for detailed keyword density analysis? Check out our <a href="keyword-density.html" target="_blank">Keyword Density Tool</a>.</p>
+
      <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
