--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -158,55 +158,48 @@
                 flex-direction: column;
             }
             
-       /* FAQ Section */
-.faq-section {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.faq-section h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #007BFF;
-}
-
-/* FAQ Container */
-.faq-container {
-    margin-top: 10px;
-}
-
-.faq-item {
-    margin-bottom: 15px;
-    padding: 10px 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background: #f9f9f9;
-    transition: background 0.3s;
-}
-
-.faq-item:hover {
-    background: #f1f1f1;
-}
-
-/* FAQ Question */
-.faq-question {
-    margin: 0;
-    font-size: 18px;
-    color: #007BFF;
-    font-weight: bold;
-}
-
-/* FAQ Answer */
-.faq-answer {
-    margin-top: 5px;
-    font-size: 16px;
-    color: #555;
-}
+       #faq {
+        background-color: #f9f9f9;
+        padding: 40px 20px;
+        margin-top: 50px;
+    }
+    #faq h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .faq-item {
+        margin-bottom: 20px;
+    }
+    .faq-item h3 {
+        font-size: 1.2em;
+        color: #333;
+    }
+    .faq-item p {
+        font-size: 1em;
+        color: #666;
+        line-height: 1.6;
+    }
+             #faq-keyword-grouping {
+        background-color: #f9f9f9;
+        padding: 40px 20px;
+        margin-top: 50px;
+    }
+    #faq-keyword-grouping h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .faq-item {
+        margin-bottom: 20px;
+    }
+    .faq-item h3 {
+        font-size: 1.2em;
+        color: #333;
+    }
+    .faq-item p {
+        font-size: 1em;
+        color: #666;
+        line-height: 1.6;
+    }
    </style>
     <script type="application/ld+json">
 {
@@ -290,34 +283,35 @@
             This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
         </p>
     </div>
-       <section class="faq-section">
-        <h2>Frequently Asked Questions</h2>
-        <div class="faq-container">
-            <!-- FAQ 1 -->
-            <div class="faq-item">
-                <h3 class="faq-question">What is keyword grouping?</h3>
-                <p class="faq-answer">
-                    Keyword grouping is the process of organizing keywords into clusters or groups based on their relevance to a specific topic or theme. This helps in creating focused content for SEO.
-                </p>
-            </div>
-
-            <!-- FAQ 2 -->
-            <div class="faq-item">
-                <h3 class="faq-question">Why is keyword grouping important?</h3>
-                <p class="faq-answer">
-                    Keyword grouping improves content relevance, increases search engine visibility, and helps in targeting multiple related keywords effectively in your content strategy.
-                </p>
-            </div>
-
-            <!-- FAQ 3 -->
-            <div class="faq-item">
-                <h3 class="faq-question">How can I group keywords efficiently?</h3>
-                <p class="faq-answer">
-                    Use tools or software to analyze keyword data, identify common themes, and cluster keywords based on user intent, relevance, and search volume.
-                </p>
-            </div>
+       <section id="faq-keyword-grouping">
+    <div class="container">
+        <h2>Frequently Asked Questions (FAQ) - Keyword Grouping Tool</h2>
+        <div class="faq-item">
+            <h3>What is the Keyword Grouping Tool?</h3>
+            <p>The Keyword Grouping Tool organizes a list of keywords into related groups based on semantic similarity. This helps you target topics effectively and streamline content creation for better SEO performance.</p>
         </div>
-    </section>
+        <div class="faq-item">
+            <h3>How does the Keyword Grouping Tool work?</h3>
+            <p>The tool uses advanced algorithms to analyze your input keywords, identify relationships between them, and create logical groups. These groups make it easier to organize your content and focus on specific topics or themes.</p>
+        </div>
+        <div class="faq-item">
+            <h3>What are the benefits of using the Keyword Grouping Tool?</h3>
+            <p>By grouping related keywords, you can improve content relevance, create better-targeted campaigns, and enhance your SEO strategy. The tool saves time by automating the process of grouping keywords, which would otherwise be manual and time-consuming.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Can I use the tool for a large list of keywords?</h3>
+            <p>Yes, the Keyword Grouping Tool is designed to handle both small and large keyword lists. Simply paste your list into the input field, and the tool will process and group the keywords efficiently.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Do I need to create an account to use the Keyword Grouping Tool?</h3>
+            <p>No, you don’t need to create an account or log in to use the Keyword Grouping Tool. It's free and available for immediate use by anyone.</p>
+        </div>
+        <div class="faq-item">
+            <h3>How can the Keyword Grouping Tool help improve my ad campaigns?</h3>
+            <p>By grouping similar keywords, the tool allows you to create ad groups that target specific themes or topics. This helps improve ad relevance, quality scores, and overall campaign performance.</p>
+        </div>
+    </div>
+</section>
         <br>
         <br>
             
