keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -279,6 +279,7 @@
                 <div id="uniqueTopics"></div>
             </div>
         </div>
+        <div>
         <p>
             This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
         </p>
