keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -163,6 +163,11 @@
         padding: 40px 20px;
         margin-top: 50px;
     }
+            .faq-container {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
     #faq h2 {
         text-align: center;
         margin-bottom: 30px;
@@ -284,8 +289,9 @@
             This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
         </p>
      <div>  
+          <div class="faq-container">
          <section id="faq-keyword-grouping">
-    <div class="container">
+   
         <h2>Frequently Asked Questions (FAQ) - Keyword Grouping Tool</h2>
         <div class="faq-item">
             <h3>What is the Keyword Grouping Tool?</h3>
