--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     </style>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
-<script>
+<script type="application">
     {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -343,6 +343,55 @@
 }
 
 </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is the purpose of the Keywords from URLs tool?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Keywords from URLs tool extracts meaningful keywords from a segment of a URL. It helps you identify relevant keywords for SEO, content creation, or competitive analysis, making it easier to enhance your website's visibility on search engines."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How does the Keyword Extractor tool work?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Keyword Extractor tool works by analyzing a URL and extracting the last meaningful segment of the URL path. It ignores file extensions (e.g., `.html`) and domain names (e.g., `.com`), providing you with precise keywords that you can use to improve your content and SEO strategy."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I use the Keywords from URLs tool for any URL?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, you can use the Keywords from URLs tool for any valid URL. The tool is designed to handle various types of URLs, including product pages, blog posts, and category pages, making it a versatile tool for extracting keywords from different types of online content."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is it necessary to log in to use the Keyword Extractor tool?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "No, you don’t need to log in to use the Keyword Extractor tool. Simply paste the URL into the input field, and the tool will instantly generate the keywords for you without requiring an account or login."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How can the Keyword Grouping and Keyword Density tools benefit my SEO strategy?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Keyword Grouping tool helps you organize keywords into related groups, improving content relevance and targeting. The Keyword Density tool helps you calculate how often certain keywords appear in your content, ensuring optimal keyword usage for better SEO performance. Both tools work together to refine and optimize your content strategy."
+      }
+    }
+  ]
+}
+</script>
+
 
 </head>
 
@@ -354,6 +403,8 @@
         <nav>
             <a href="https://keywordsfromurls.com/">Home</a>
             <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
+              <a href="about-us.html" target="_blank">About Us</a>
+            <a href="contact-us.html" target="_blank">Contact Us</a>
             </nav>
     </header>
 
