--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk keywords from Bulk URLs with our free online tool. Simplify keyword extraction, and organize website data easily. Try it now!">
+    <meta name="description" content="Extract Bulk keywords from Bulk URLs [sitemap] in one click Explore a variety of tools designed to simplify blogging tasks and save time for bloggers.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
+ <title>Get Keywords From Bulk Urls [sitemaps] Just In one Click</title>
 
     <style>
         /* General Reset */
