keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -158,7 +158,7 @@
                 flex-direction: column;
             }
             #faq {
-    margin-top: 20px;
+    margin-top: 10px;
 }
             /* FAQ item styles */
 .faq-item {
@@ -190,14 +190,6 @@
             @media (max-width: 768px) {
                  main {
         padding: 15px;
-    }
-
-    h1 {
-        font-size: 28px;
-    }
-
-    h2 {
-        font-size: 24px;
     }
 
     .faq-item h3 {
@@ -329,40 +321,57 @@
         </div>
         <div class="summary" id="summarySection" style="display: none;">
             <div>
-                <h3>Common Topics</h3>
+                <h2>Common Topics</h2>
                 <button class="copy-btn btn btn-warning" onclick="copySection('commonTopics', this)">Copy Common</button>
                 <div id="commonTopics"></div>
             </div>
             <div class="mt-4">
-                <h3>Unique Topics</h3>
+                <h2>Unique Topics</h2>
                 <button class="copy-btn btn btn-info" onclick="copySection('uniqueTopics', this)">Copy Unique</button>
                 <div id="uniqueTopics"></div>
             </div>
         </div>
        
-        <p>
-            This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
-        </p>
+        <h2>How to Use the Keyword Grouping Tool</h2>
+            <p>The Keyword Grouping Tool helps you organize and categorize keywords extracted from URLs. With this tool, you can group common and unique keywords for better SEO strategy and content management. Follow the steps below to use it:</p>
+
+            <h3>1. Paste or Extract Keywords</h3>
+            <p>Start by pasting the list of keywords you have extracted from URLs or by entering keywords directly into the provided text area. You can paste keywords from your clipboard or use the Keyword Extractor tool to gather them automatically.</p>
+
+            <h3>2. Start Keyword Grouping</h3>
+            <p>Once the keywords are in the text area, click on the "Start Keyword Grouping" button. The tool will process your list of keywords, grouping similar ones together based on relevance and frequency.</p>
+
+            <h3>3. View the Grouped Keywords</h3>
+            <p>After the tool finishes processing, you will see the output with keywords grouped into common and unique categories. Common keywords will be grouped together, and unique ones will stand alone, making it easy to identify which terms are highly relevant to your content.</p>
+
+            <h3>4. Copy the Grouped Keywords</h3>
+            <p>If you want to use the grouped keywords, simply click on the "Copy Output" button. This will copy both the unique and common keywords to your clipboard for easy pasting into your content or keyword list.</p>
+
+            <h3>5. Manage Your Keywords</h3>
+            <p>Once you have copied the grouped keywords, you can manage them however you wish. Organize them into your content strategy, adjust them based on your SEO needs, or add them to your list of target keywords for optimization.</p>
+
+            <h3>6. Enjoy Organized Keyword Data</h3>
+            <p>The Keyword Grouping tool saves you time by automating the process of keyword categorization. With grouped keywords at your fingertips, you can now focus on improving your content and boosting your SEO strategy.</p>
        <section id="faq">
-            <h2>Frequently Asked Questions</h2>
+            <h4>Frequently Asked Questions</h4>
             <div class="faq-item">
-                <h3>1. What is your website about?</h3>
+                <P>1. What is your website about?</p>
                 <p>Our website provides tools and resources for keyword extraction, slug generation, and other SEO-related tasks.</p>
             </div>
             <div class="faq-item">
-                <h3>2. How can I use your tools?</h3>
+                <p>2. How can I use your tools?</p>
                 <p>You can visit the respective tool pages, input your data, and follow the simple instructions provided.</p>
             </div>
             <div class="faq-item">
-                <h3>3. Do you offer free tools?</h3>
+                <p>3. Do you offer free tools?</p>
                 <p>Yes, most of our tools are free to use, and we continuously update them for better performance.</p>
             </div>
             <div class="faq-item">
-                <h3>4. Can I contact you for support?</h3>
+                <p>4. Can I contact you for support?</p>
                 <p>Yes, you can contact us via the Contact Us page for any queries or suggestions.</p>
             </div>
             <div class="faq-item">
-                <h3>5. Do you provide API access to your tools?</h3>
+                <p>5. Do you provide API access to your tools?</p>
                 <p>Currently, we do not provide API access, but it is on our roadmap for the future.</p>
             </div>
         </section>
