Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -233,7 +233,7 @@
         line-height: 1.6;
     }
     </style>
-   <script> 
+   <script type="application/ld+json">
        {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -249,6 +249,39 @@
   }
 }
    </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is the Slug Generator tool?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Slug Generator tool helps you create SEO-friendly slugs for your URLs. It converts titles or text into clean, readable, and optimized slugs, which are essential for better search engine ranking and user experience."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I generate a slug?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "To generate a slug, simply enter the title or text in the input field, choose the separator (hyphen or underscore), and click the 'Generate Slug' button. The tool will automatically create a clean and SEO-optimized slug for you to use in your URLs."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I remove numbers or dots from the generated slug?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes! The Slug Generator tool gives you the option to remove numbers, dots, or any unwanted characters from the generated slug. You can choose to exclude these characters for a cleaner and more focused slug."
+      }
+    }
+  ]
+}
+</script>
+
 </head>
 <body>
     <!-- Header -->
