--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -283,7 +283,8 @@
       ]
     }
     </script>
-    
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
+     crossorigin="anonymous"></script> 
 
     
 </head>
