--- a/chrome-extension-for-keyword-extraction-from-urls.html
+++ b/chrome-extension-for-keyword-extraction-from-urls.html
@@ -190,7 +190,8 @@
   "downloadUrl": "https://chromewebstore.google.com/detail/keywords-from-urls-bloggi/daclbfnlfjkfgkcfdepgdlbchndjhehd"
 }
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
+     crossorigin="anonymous"></script>
 </head>
 <body>
      <!-- Header -->
