--- a/contact-us.html
+++ b/contact-us.html
@@ -115,6 +115,8 @@
             }
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Header -->
