--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -325,9 +325,8 @@
   ]
 }
 </script>
-
-
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
